syntax = "proto3";
package confio.twasm.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmwasm/wasm/v1beta1/types.proto";

option go_package = "github.com/confio/tgrade/x/twasm/types";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = true;

// PromoteToPrivilegedContractProposal gov proposal content type to add
// "privileges" to a contract
message PromoteToPrivilegedContractProposal {
  // Title is a short summary
  string title = 1 [ (gogoproto.moretags) = "yaml:\"title\"" ];
  // Description is a human readable text
  string description = 2 [ (gogoproto.moretags) = "yaml:\"description\"" ];
  // Contract is the address of the smart contract
  string contract = 3 [ (gogoproto.moretags) = "yaml:\"contract\"" ];
}

// PromoteToPrivilegedContractProposal gov proposal content type to remove
// "privileges" from a contract
message DemotePrivilegedContractProposal {
  // Title is a short summary
  string title = 1 [ (gogoproto.moretags) = "yaml:\"title\"" ];
  // Description is a human readable text
  string description = 2 [ (gogoproto.moretags) = "yaml:\"description\"" ];
  // Contract is the address of the smart contract
  string contract = 3 [ (gogoproto.moretags) = "yaml:\"contract\"" ];
}
